--- a/test/manager.html
+++ b/test/manager.html
@@ -9,6 +9,7 @@
   <script src="lib/jquery.js" type="text/javascript" charset="utf-8"></script>
   <script src="../lib/spine.js" type="text/javascript" charset="utf-8"></script>
   <script src="../lib/manager.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../lib/route.js" type="text/javascript" charset="utf-8"></script>
 
   <script src="specs/manager.js" type="text/javascript" charset="utf-8"></script>
 </head>
